infra/db.tf
resource "aws_db_subnet_group" "subnet_group" {
  name       = "main"
  subnet_ids = local.private_subnet_ids
  tags = {
    Name = "My DB subnet group"
  }
}

#RDS instance with managed master password
resource "aws_db_instance" "rds_instance" {
  identifier = "${var.project}-${var.rds.identifier_suffix}"

  allocated_storage = var.rds.allocated_storage
  engine            = var.rds.engine
  engine_version    = var.rds.engine_version
  instance_class    = var.rds.instance_class
  db_name           = var.rds.db_name

  username = var.rds.master_username

  manage_master_user_password = true

  publicly_accessible = var.rds.publicly_accessible
  skip_final_snapshot = var.rds.skip_final_snapshot

  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name   = aws_db_subnet_group.subnet_group.name
}

# Notes:
# • Password is auto-generated by AWS
# • Stored in AWS Secrets Manager automatically
# • Encrypted using the custom KMS key
# • No password appears in Terraform code or plan
# • Secret is created with name like:
#   rds-db-credentials/<db-instance-id>/<random>
# • Recommended production approach
